[package]
name = "haemo"
version = "0.1.0"
authors = ["shijuleon <shijuleon@gmail.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
[dev-dependencies]
array-init = "0.0.3"

[dependencies]
bootloader = "0.3.4"
bootloader_precompiled = "0.2.0"
volatile = "0.2.3"
spin = "0.4.9"
uart_16550 = "0.1.0"
x86_64 = "0.2.8"
pic8259_simple = "0.1.1"
pc-keyboard = "0.3.1"

[package.metadata.bootimage]
default-target = "x86_64-haemo.json"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[features]
integration-test = []
